--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -1,9 +1,10 @@
 ﻿@page "/"
+@using Energy.App.Standalone.Features.AppInit
+@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Welcome</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    <AppInitializeLoaders />
+
