--- a/Energy.App.Standalone/Features/Analysis/HeatingMeter.razor
+++ b/Energy.App.Standalone/Features/Analysis/HeatingMeter.razor
@@ -20,8 +20,8 @@
 
     protected override void OnParametersSet()
     {
+        base.OnParametersSet();
         _meterType = MeterTypeName.eStringToEnum<MeterType>();
-        Dispatcher.Dispatch(new InitiateUpdateLinearCoefficientsAction());
     }
 }
 
